WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158026
Fix null pointer dereferencing in WebViewImpl::inputContext
https://bugs.webkit.org/show_bug.cgi?id=158026
Summary
Fix null pointer dereferencing in WebViewImpl::inputContext
Alex Christensen
Reported
2016-05-24 11:12:18 PDT
Fix null pointer dereferencing in WebViewImpl::inputContext
Attachments
Patch
(1.30 KB, patch)
2016-05-24 11:13 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(1.15 KB, patch)
2016-05-24 13:58 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2016-05-24 11:13:01 PDT
Created
attachment 279674
[details]
Patch
Alex Christensen
Comment 2
2016-05-24 13:58:44 PDT
Created
attachment 279701
[details]
Patch
Tim Horton
Comment 3
2016-05-24 13:59:25 PDT
Comment on
attachment 279701
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=279701&action=review
> Source/WebKit2/ChangeLog:11 > + this was null sometimes in WebViewImpl::inputContext.
Capital t.
Alex Christensen
Comment 4
2016-05-24 14:01:35 PDT
This was not null. this was.
WebKit Commit Bot
Comment 5
2016-05-24 14:11:25 PDT
Comment on
attachment 279701
[details]
Patch Clearing flags on attachment: 279701 Committed
r201351
: <
http://trac.webkit.org/changeset/201351
>
WebKit Commit Bot
Comment 6
2016-05-24 14:11:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug