Fix null pointer dereferencing in WebViewImpl::inputContext https://bugs.webkit.org/show_bug.cgi?id=158026 rdar://problem/25994093

Patch by Alex Christensen <achristensen@webkit.org> on 2016-05-24
Reviewed by Tim Horton.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView inputContext]):
this was null sometimes in WebViewImpl::inputContext.

Canonical link: https://commits.webkit.org/176161@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201351 268f45cc-cd09-0410-ab3c-d52691b4dbfc